--- a/templates/admin/base_admin.html.twig
+++ b/templates/admin/base_admin.html.twig
@@ -17,7 +17,7 @@
         <header>       
             <nav>
                 <ul>
-                    <li><a href="{{path('app_main')}}"><img src="{{asset('imgs/house-tree.png')}}" width=30 alt="home"></a></li>
+                    <li><a href="{{path('app_main')}}"><img src="{{asset('imgs/icons/house-tree.png')}}" width=30 alt="home"></a></li>
                     <li><a href="{{path('app_admin_calendar_index')}}">Calendrier</a></li>
                     <li><a href="{{path('app_admin_challenge_index')}}">Défis</a></li>
                     <li><a href="">Ranking</a></li>
