--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -40,7 +40,7 @@ body {
   flex-direction: column;
   justify-content: space-between;
   min-height: 100vh;
-  background-color: #fffcf5;
+  background: #fff;
   color: #302f2f;
   font-size: 1.8rem;
   font-family: "Montserrat", sans-serif;
@@ -77,15 +77,49 @@ header h1 span {
   color: #da1600;
   font-family: hiChristmas;
 }
-header .count {
+header .ball {
   width: -moz-fit-content;
   width: fit-content;
   margin: 1rem auto;
   padding: 1rem;
-  background-color: #0b5d31;
   font-size: 3rem;
   font-weight: 700;
-  color: #fff;
+  width: 20rem;
+  height: 20rem;
+  background: radial-gradient(circle, #d0e9f5, #dbefff);
+  border-radius: 50%;
+  box-shadow: inset 0 0 10px rgba(255, 255, 255, 0.5), 0 4px 8px rgba(0, 0, 0, 0.2);
+  position: relative;
+}
+header .ball::before {
+  content: "";
+  position: absolute;
+  top: 20%;
+  left: 20%;
+  width: 50%;
+  height: 50%;
+  background: radial-gradient(circle, rgba(255, 255, 255, 0.6), rgba(255, 255, 255, 0) 60%);
+  border-radius: 50%;
+  filter: blur(2px);
+}
+header .ball::after {
+  content: "";
+  position: absolute;
+  bottom: 10%;
+  right: 10%;
+  width: 30%;
+  height: 30%;
+  background: rgba(255, 255, 255, 0.2);
+  border-radius: 50%;
+}
+header .ball .count {
+  width: 100%;
+  height: 100%;
+  color: #0b5d31;
+  display: flex;
+  flex-wrap: nowrap;
+  align-items: center;
+  justify-content: center;
 }
 
 main {
