--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -52,7 +52,7 @@ body {
   flex-direction: column;
   justify-content: space-between;
   min-height: 100vh;
-  background-color: $colorBeige;
+  background: $colorWhite;
   color: #302f2f;
   font-size: 1.8rem;
   font-family: "Montserrat", sans-serif;
@@ -96,14 +96,62 @@ header {
     }
   }
 
-  .count {
+  .ball {
     width: fit-content;
     margin: 1rem auto;
     padding: 1rem;
-    background-color: $colorGreen;
     font-size: 3rem;
     font-weight: 700;
-    color: #fff;
+    width: 20rem;
+    height: 20rem;
+    // background: radial-gradient(
+    //   circle at 30% 30%,
+    //   rgba(255, 255, 255, 0.8),
+    //   rgba(255, 255, 255, 0.1) 40%,
+    //   rgba(255, 255, 255, 0) 70%
+    // );
+    background: radial-gradient(circle, #d0e9f5, #dbefff);
+    border-radius: 50%;
+    box-shadow: inset 0 0 10px rgba(255, 255, 255, 0.5),
+      0 4px 8px rgba(0, 0, 0, 0.2);
+    position: relative;
+
+    &::before {
+      content: "";
+      position: absolute;
+      top: 20%;
+      left: 20%;
+      width: 50%;
+      height: 50%;
+      background: radial-gradient(
+        circle,
+        rgba(255, 255, 255, 0.6),
+        rgba(255, 255, 255, 0) 60%
+      );
+      border-radius: 50%;
+      filter: blur(2px);
+    }
+
+    &::after {
+      content: "";
+      position: absolute;
+      bottom: 10%;
+      right: 10%;
+      width: 30%;
+      height: 30%;
+      background: rgba(255, 255, 255, 0.2);
+      border-radius: 50%;
+    }
+
+    .count {
+      width: 100%;
+      height: 100%;
+      color: $colorGreen;
+      display: flex;
+      flex-wrap: nowrap;
+      align-items: center;
+      justify-content: center;
+    }
   }
 }
 
