--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -288,17 +288,41 @@ main{
 
     section.game{
         div#quiz{
+
+            margin-bottom:2rem;
+
+            .test .form-check{
+                display:block;
+                margin-bottom: 10px;
+            }
+
             label{
                 display:inline-block;
                 color:#267045;
-                
-    
+                margin: 2rem 0 1rem;
+                font-weight:500;
             }
-            input{
+
+            input.text-type{
                 display: block;
                 width:100%;
                 padding:1rem;
-                margin: 1rem 0 2rem;
+                
+            }
+
+            .choice-type{
+                & > label{
+                    margin:0 0 1rem 0;
+                    display: inline-block;
+                    width:calc(100% - 4rem);
+                    color:#302f2f;
+                    font-weight: 400;
+                } 
+                  
+                input{
+                    display: inline-block;
+                    width:4rem;
+                }
             }
 
             & + button.btn.submit{
@@ -341,18 +365,42 @@ main{
     }
 
     section.galerie{
-        figure{
-            display: inline-block;
-            width:49%;
 
-            img{
-                width:100%;
-            }
+        .elements{
+            display: grid;
+            grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
+            gap: 10px;
+            margin:2rem auto;
 
-            figcaption{
-                text-align: center;
-                color:#da1300;
-                font-weight: 600;
+            figure{
+                margin: 0;
+                padding: 0;
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                
+                a{
+                    line-height: 0;
+                }
+
+                img{
+                    width: 100%;
+                    height: auto;
+                    aspect-ratio: 1/1;
+                    object-fit: cover;
+                    border-radius: .8rem .8rem 0 0;
+                }
+    
+                figcaption{
+                    font-size:0.9em;
+                    text-align: center;
+                    background-color:#f1b846;
+                    padding:1rem;
+                    color:#fff;
+                    font-weight: 600;
+                    width:100%;
+                    border-radius: 0 0 .8rem .8rem;
+                }
             }
         }
     }
