--- a/templates/calendar/index.html.twig
+++ b/templates/calendar/index.html.twig
@@ -9,11 +9,19 @@
     <section class="rules">
         <h3>Règles du jeu</h3>
         <p>{{calendar.challenge.description}}</p>
+
+        {% if not app.user %}
+            {{ include('_login.html.twig')}} 
+        {% endif %}
     </section>
 
-    {% if results is not empty %}
+    {% if points is not empty %}
+    
         <h3>Résultats</h3>
-        <p>Félicitations, tu as marqué <span class="points">{{ results.points }} point{{results.points > 1 ? 's' : ''}}</span> ! </p>
+        <p>Félicitations, tu as marqué <span class="points">{{ points }} point{{points > 1 ? 's' : ''}}</span> ! </p>
+
+        
+
     {% else %} 
 
         {% if type == 'quiz' %} 
@@ -24,6 +32,10 @@
 
     {% endif %}
 
+    {% if type == 'photo' %}
+        {{ include('calendar/_galerie.html.twig')}}
+    {% endif %}
+    
     <section class="ranking">
         <h3>Le classement actuel du défi</h3>
         <table>
