--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -12,7 +12,8 @@
         {% endblock %}
     </head>
     <body>
-        <header>       
+        <header>
+        <div class="overlay"></div>      
             <nav>
                 <ul>
                     <li><a href="{{path('app_main')}}"><img src="{{asset('imgs/icons/house-tree.png')}}" width=30 alt="home"></a></li>
