--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -48,10 +48,9 @@ body {
 
 header nav {
   padding: 2rem;
-  margin-bottom: 2rem;
-  background-image: url(../../assets/imgs/bg/pexels-jeshoots-281618.jpg);
-  background-size: cover;
+  margin-bottom: 3rem;
   color: white;
+  background-color: #0b5d31;
 }
 header nav ul {
   display: flex;
@@ -63,7 +62,8 @@ header nav ul {
 header nav ul a:hover {
   color: #f1b846;
 }
-header h1 {
+
+h1 {
   font-size: 11rem;
   color: #da1600;
   font-weight: 400;
@@ -71,13 +71,14 @@ header h1 {
   text-align: center;
   line-height: 0.7;
 }
-header h1 span {
+h1 span {
   font-size: 0.75em;
   display: block;
   color: #da1600;
   font-family: hiChristmas;
 }
-header .ball {
+
+.ball {
   width: -moz-fit-content;
   width: fit-content;
   margin: 1rem auto;
@@ -91,7 +92,7 @@ header .ball {
   box-shadow: inset 0 0 10px rgba(255, 255, 255, 0.5), 0 4px 8px rgba(0, 0, 0, 0.2);
   position: relative;
 }
-header .ball::before {
+.ball::before {
   content: "";
   position: absolute;
   top: 20%;
@@ -102,7 +103,7 @@ header .ball::before {
   border-radius: 50%;
   filter: blur(2px);
 }
-header .ball::after {
+.ball::after {
   content: "";
   position: absolute;
   bottom: 10%;
@@ -112,7 +113,7 @@ header .ball::after {
   background: rgba(255, 255, 255, 0.2);
   border-radius: 50%;
 }
-header .ball .count {
+.ball .count {
   width: 100%;
   height: 100%;
   color: #0b5d31;
@@ -139,6 +140,7 @@ main h2 {
 }
 main p {
   margin: 2rem 0;
+  text-align: center;
 }
 main p a {
   font-weight: 700;
@@ -210,6 +212,10 @@ main .calendar div.table a img {
 }
 main .calendar table {
   border-collapse: collapse;
+}
+main .ranking h3 {
+  text-align: center;
+  margin-bottom: 1rem;
 }
 main .ranking table {
   width: 100%;
@@ -346,4 +352,56 @@ footer {
   text-align: center;
   background-color: #0b5d31;
   color: white;
+}
+
+/*   RESPONSIVE   */
+@media (min-width: 480px) {
+  main {
+    width: 90%;
+    margin: auto;
+  }
+}
+@media (min-width: 720px) {
+  main {
+    width: 80%;
+    margin: auto;
+  }
+  header {
+    position: relative;
+    background-image: url(../../assets/imgs/bg/pexels-barry-plott-48592-753410.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
+  header nav {
+    background-color: #0b5d31;
+  }
+  header h1,
+  header h1 span {
+    color: #fff;
+    font-size: 12rem;
+    text-shadow: 5px 2px 9px black;
+  }
+}
+@media (min-width: 1080px) {
+  main {
+    width: 70%;
+    margin: auto;
+  }
+  main .calendar {
+    width: 70%;
+    margin: auto;
+  }
+  main .ranking table {
+    width: 65%;
+    margin: auto;
+  }
+  header nav {
+    padding: 2rem;
+  }
+  header nav ul {
+    justify-content: center;
+  }
+  header nav ul li {
+    margin: auto 6rem;
+  }
 }/*# sourceMappingURL=app.css.map */
