--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -9,6 +9,19 @@
   src: url("../fonts/hi_christmas.otf");
 }
 
+/* Variables */
+$colorWhite: #fff;
+$colorGreen: #0b5d31;
+$colorRed: #da1600;
+$colorLightBlue: #a5d0d9;
+
+$phone-down: 500px;
+$tablet-up: 768px;
+$tablet-down: 900px;
+$desktop-up: 1024px;
+$desktop-down: 1280px;
+$widescreen-up: 1440px;
+
 /* Reset */
 *,
 html,
@@ -18,12 +31,6 @@ body {
   box-sizing: border-box;
   -webkit-box-sizing: border-box;
 }
-
-/* Variables */
-$colorWhite: #fff;
-$colorGreen: #0b5d31;
-$colorRed: #da1600;
-$colorLightBlue: #a5d0d9;
 
 /* 1rem = 10px */
 html {
@@ -284,9 +291,10 @@ main {
 
     input:not([type="checkbox"]) {
       display: block;
-      width: 50%;
+      width: 80%;
       margin: 0.5rem auto 1rem;
-      padding: 0.5rem;
+      padding:1rem;
+      font-size:inherit;
       color: #5c5b5b;
       text-align: center;
       font-weight: inherit;
@@ -300,7 +308,7 @@ main {
       display: block;
       margin: 1rem auto;
       padding: 0.5rem;
-      width: 50%;
+      width: 80%;
       background-color: #f1b846;
       color: #fff;
       border: none;
@@ -413,19 +421,43 @@ main {
   }
 
   section.galerie{
-    figure{
-      display: inline-block;
-      width:49%;
 
-      img{
-        width:100%;
-      }
+    .elements{
+        display: grid;
+        grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
+        gap: 10px;
+        margin:2rem auto;
+        
+        figure{
+            margin: 0;
+            padding: 0;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            
+            a{
+                line-height: 0;
+            }
 
-      figcaption{
-        text-align: center;
-        color: $colorRed;
-        font-weight: 600;
-      }
+            img{
+                width: 100%;
+                height: auto;
+                aspect-ratio: 1/1;
+                object-fit: cover;
+                border-radius: .8rem .8rem 0 0;
+            }
+
+            figcaption{
+                font-size:0.9em;
+                text-align: center;
+                background-color:#f1b846;
+                padding:1rem;
+                color:#fff;
+                font-weight: 600;
+                width:100%;
+                border-radius: 0 0 .8rem .8rem;
+            }
+        }
     }
   }
 }
@@ -440,58 +472,89 @@ footer {
 
 /*   RESPONSIVE   */
 
-@media (min-width: 480px) {
-  main {
-    width: 90%;
-    margin: auto;
-  }
+@media screen and (min-width: $tablet-up){ // 700px
+    
+    header {
+        position: relative;
+        background-image: url(../../assets/imgs/bg/pexels-barry-plott-48592-753410.jpg);
+        background-repeat: no-repeat;
+        background-size: cover;
+    
+        nav {
+          background-color: $colorGreen;
+        }
+
+        h1,
+        h1 span {
+          color: $colorWhite;
+          font-size: 12rem;
+          text-shadow: 5px 2px 9px black;
+        }
+    }
+
+    main{
+        width: 90%;
+        margin:auto;
+    }
+
+} 
+
+@media screen and (min-width: $desktop-up){ // 1024 px
+    header{
+        h1{
+            font-size: 15rem;
+        }
+        nav {
+            padding: 2rem;
+            ul {
+              justify-content: center;
+        
+              li {
+                margin: auto 6rem;
+              }
+            }
+        }
+    }
+
+    body{
+        font-size:2rem;
+
+        main{
+            width: 80%;
+    
+            h2{
+                font-size:11rem;
+            }
+
+            .calendar {
+                width: 70%;
+                margin: auto;
+            }
+
+            .ranking table {
+                width: 65%;
+                margin: auto;
+            }
+
+            header 
+
+            .register-form, .login-form{
+                input:not([type=checkbox]){
+                    max-width: 45rem;
+                    font-size:inherit;
+                }
+
+                button[type=submit]{
+                    max-width: 45rem;
+                }
+            }
+        }
+    }
+} 
+
+@media screen and (min-width: $widescreen-up){
+    main{
+        max-width:120rem;
+    }
 }
 
-@media (min-width: 720px) {
-  main {
-    width: 80%;
-    margin: auto;
-  }
-  header {
-    position: relative;
-    background-image: url(../../assets/imgs/bg/pexels-barry-plott-48592-753410.jpg);
-    background-repeat: no-repeat;
-    background-size: cover;
-
-    nav {
-      background-color: $colorGreen;
-    }
-    h1,
-    h1 span {
-      color: $colorWhite;
-      font-size: 12rem;
-      text-shadow: 5px 2px 9px black;
-    }
-  }
-}
-
-@media (min-width: 1080px) {
-  main {
-    width: 70%;
-    margin: auto;
-    .calendar {
-      width: 70%;
-      margin: auto;
-    }
-    .ranking table {
-      width: 65%;
-      margin: auto;
-    }
-  }
-
-  header nav {
-    padding: 2rem;
-    ul {
-      justify-content: center;
-
-      li {
-        margin: auto 6rem;
-      }
-    }
-  }
-}
