--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -168,6 +168,11 @@ main {
     color: $colorRed;
   }
 
+  h3 {
+    text-align: center;
+    margin-bottom: 1rem;
+  }
+
   p {
     margin: 2rem 0;
     text-align: center;
@@ -258,10 +263,6 @@ main {
   }
 
   .ranking {
-    h3 {
-      text-align: center;
-      margin-bottom: 1rem;
-    }
     table {
       width: 100%;
       table-layout: auto;
@@ -277,76 +278,7 @@ main {
       }
     }
   }
-
-  .register-form,
-  .login-form {
-    text-align: center;
-    h2 {
-      color: $colorGreen;
-    }
-
-    label {
-      color: $colorGreen;
-    }
-
-    input:not([type="checkbox"]) {
-      display: block;
-      width: 80%;
-      margin: 0.5rem auto 1rem;
-      padding:1rem;
-      font-size:inherit;
-      color: #5c5b5b;
-      text-align: center;
-      font-weight: inherit;
-    }
-
-    small {
-      color: #d89a1e;
-    }
-
-    button[type="submit"] {
-      display: block;
-      margin: 1rem auto;
-      padding: 0.5rem;
-      width: 80%;
-      background-color: #f1b846;
-      color: #fff;
-      border: none;
-      font-size: inherit;
-      font-family: inherit;
-      cursor: pointer;
-    }
-  }
-
-  .profile {
-    .infos {
-      display: flex;
-      justify-content: space-around;
-      align-items: stretch;
-      margin-bottom: 3rem;
-
-      p:first-of-type {
-        font-size: 1.2em;
-        font-weight: 600;
-        color: $colorGreen;
-      }
-
-      img {
-        width: 30%;
-      }
-
-      a {
-        display: block;
-        margin: 1rem 0;
-        padding: 0.5rem;
-        text-align: center;
-        background-color: $colorGreen;
-        color: #fff;
-        cursor: pointer;
-      }
-    }
-  }
-
+  
   section.game{
     div#quiz{
         margin-bottom:2rem;
@@ -421,10 +353,9 @@ main {
   }
 
   section.galerie{
-
     .elements{
         display: grid;
-        grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
+        grid-template-columns: repeat(auto-fill, minmax(20rem, 1fr));
         gap: 10px;
         margin:2rem auto;
         
@@ -460,6 +391,76 @@ main {
         }
     }
   }
+  .register-form,
+  .login-form {
+    text-align: center;
+    h2 {
+      color: $colorGreen;
+    }
+
+    label {
+      color: $colorGreen;
+    }
+
+    input:not([type="checkbox"]) {
+      display: block;
+      width: 80%;
+      margin: 0.5rem auto 1rem;
+      padding:1rem;
+      font-size:inherit;
+      color: #5c5b5b;
+      text-align: center;
+      font-weight: inherit;
+    }
+
+    small {
+      color: #d89a1e;
+    }
+
+    button[type="submit"] {
+      display: block;
+      margin: 1rem auto;
+      padding: 0.5rem;
+      width: 80%;
+      background-color: #f1b846;
+      color: #fff;
+      border: none;
+      font-size: inherit;
+      font-family: inherit;
+      cursor: pointer;
+    }
+  }
+
+  .profile {
+    .infos {
+      display: flex;
+      justify-content: space-around;
+      align-items: stretch;
+      margin-bottom: 3rem;
+
+      p:first-of-type {
+        font-size: 1.2em;
+        font-weight: 600;
+        color: $colorGreen;
+      }
+
+      img {
+        width: 30%;
+      }
+
+      a {
+        display: block;
+        margin: 1rem 0;
+        padding: 0.5rem;
+        text-align: center;
+        background-color: $colorGreen;
+        color: #fff;
+        cursor: pointer;
+      }
+    }
+  }
+
+
 }
 
 footer {
@@ -495,6 +496,8 @@ footer {
     main{
         width: 90%;
         margin:auto;
+
+        
     }
 
 } 
@@ -527,16 +530,9 @@ footer {
             }
 
             .calendar {
-                width: 70%;
+                width: 80%;
                 margin: auto;
             }
-
-            .ranking table {
-                width: 65%;
-                margin: auto;
-            }
-
-            header 
 
             .register-form, .login-form{
                 input:not([type=checkbox]){
